@@ -410,12 +410,6 @@ void NV_WriteRamin32(uint32_t offset, uint32_t val);
 // NV-VGA
 void NV_CRTCLockExtendedRegisters();
 void NV_CRTCUnlockExtendedRegisters();
-uint8_t NV_ReadCRTC(uint8_t index);
-uint8_t NV_ReadGDC(uint8_t index);
-uint8_t NV_ReadSequencer(uint8_t index);
-void NV_WriteCRTC(uint8_t index, uint8_t value);
-void NV_WriteGDC(uint8_t index, uint8_t value);
-void NV_WriteSequencer(uint8_t index, uint8_t value);
 
 // Clock
 
